packages/kit/test/apps/basics/src/routes/errors/endpoint.json/+server.js
export function GET() {
	throw new Error('nope');
}
